--- a/front/style/style.css
+++ b/front/style/style.css
@@ -35,5 +35,37 @@
     line-height: 29px;
     font-family:'Montserrat', sans-serif;
     font-weight: 400;
-    padding: 89px 87px 105px 87px;
+    margin: 89px 0px 83px 0px;
+}
+input::-webkit-input-placeholder { color: #575757; }
+.authorization input{
+    width: 272px;
+    border: none;
+    background:transparent;
+    margin-bottom: 30px;
+    font-family:'Montserrat', sans-serif;
+    font-weight: 400;
+    line-height: 22px;
+    color: #575757;
+    font-size: 18px;
+    border-bottom:1px solid #000000;
+}
+.authorization input:focus{
+    outline:none;
+}
+.log_auth{
+    margin-top: 30px;
+    background: #000000;
+    border-radius: 34px;
+    width: 115px;
+    height: 36px;
+    font-size: 14px;
+    line-height: 17px;
+    font-family:'Montserrat', sans-serif;
+    font-weight: 400;
+    color: #FFFFFF;
+    margin-bottom: 55px;
+}
+.log_auth:hover{
+    cursor: pointer;
 }
