--- a/front/style/main.css
+++ b/front/style/main.css
@@ -60,14 +60,13 @@ input::-webkit-input-placeholder { color: #575757; }
     background: #000000;
     border-radius: 34px;
     border: 0;
-    width: 115px;
-    height: 36px;
     font-size: 14px;
     line-height: 17px;
     font-family:'Montserrat', sans-serif;
     font-weight: 400;
     color: #FFFFFF;
     margin-bottom: 55px;
+    padding: 9px 34px;
 }
 .log_auth_but:hover{
     cursor: pointer;
@@ -87,6 +86,4 @@ input::-webkit-input-placeholder { color: #575757; }
 }
 .registration button{
     margin-top: 10px;
-    width: 220px;
-    height: 35px;
 }
