--- a/front/style/order.css
+++ b/front/style/order.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 .check{
     border: 2px solid red;
 }
 body{
     margin: 0;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column
 }
 .header{
     min-width: 1440px;
     width: 100%;
     height: 90px;
     display: flex;
-    align-items: center;
     background: #253D98;
     color: white;
-    align-items: center;
+    align-items:center;
     justify-content: space-between;
 }
 .navigation{
@@ -62,4 +62,46 @@ body{
     background-size: cover;
     width: 12px;
     height: 16px;
+}
+.filter{
+    margin-top: 38px;
+    min-width: 1440px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 171px;
+}
+.filter button{
+    display: flex;
+    border: none;
+    background: #253D98;
+    border-radius: 10px;
+    padding: 10px 27px;
+    margin-left: 23px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: white;
+    cursor: pointer;
+    align-items: center;
+}
+.filter button:first-child{
+    margin-left: 0px;
+}
+.storage_but::before{
+    content: "";
+    background-image: url(../img/Storage.svg);
+    background-size: cover;
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
+}
+.filter_but::before{
+    content: "";
+    background-image: url(../img/filter.svg);
+    background-size: cover;
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
 }
