--- a/front/style/order.css
+++ b/front/style/order.css
@@ -114,10 +114,10 @@ body{
     margin-top: 38px;
 }
 .stroke_explain{
-    padding: 0px 26px;
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items: center;
+    margin-bottom: 21px;
 }
 .stroke_explain p{
     font-family: 'Inter', sans-serif;
@@ -125,5 +125,25 @@ body{
     font-size: 18px;
     line-height: 22px;
     color: black;
+    margin: 0;
+}
+.orders_table{
+    padding: 0;
+    margin: 0;
+}
+.orders_table li{
+    border-top: 2px solid #003578;
+    list-style-type: none;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: black;
+    padding: 21px 0;
+}
+.orders_table li p{
     margin: 0;
 }
