--- a/front/style/order.css
+++ b/front/style/order.css
@@ -114,9 +114,9 @@ body{
     margin-top: 38px;
 }
 .stroke_explain{
-    display: flex;
-    justify-content:space-around;
+    grid-template-columns: repeat(5,1fr);
     align-items: center;
+    display: grid;
     margin-bottom: 21px;
 }
 .stroke_explain p{
@@ -126,6 +126,7 @@ body{
     line-height: 22px;
     color: black;
     margin: 0;
+    justify-self: center;
 }
 .orders_table{
     padding: 0;
@@ -134,16 +135,18 @@ body{
 .orders_table li{
     border-top: 2px solid #003578;
     list-style-type: none;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     color: black;
     padding: 21px 0;
+    align-items: center;
+    
 }
 .orders_table li p{
     margin: 0;
+    justify-self: center;
 }
